# computional_workship

./: CMakeLists.txt  algebraic_interpolation.cpp  algebraic_interpolation.h  approximate_calculation.cpp  approximate_calculation.h  diff_eq.cpp  diff_eq.h  lib.h  main.cpp  nonlinear_equation.cpp  nonlinear_equation.h  numerical_differentiation.cpp  numerical_differentiation.h  quadrature_formulas.cpp  quadrature_formulas.h  reverse_interpolation.cpp  reverse_interpolation.h  tasks.cpp  tasks.h
